[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
chrono = "0.4.26"
maplit = "1.0.2"
uuid = {version = "1.3.3", features = ["v4"]}
